tests/fixtures/semantic/invalid/missing-return.ck
module app.bad

fn label() -> String {
  let x = "a"
}
